src/homepage/body-content/BodyContent.scss
.home-body {
    .primary-text {
        color: var(--blue-active);
    }

    .r1 {
        margin-bottom: 120px;
    }

    .r2 {
        background-color: var(--blue-active);
        padding-bottom: 70px;
    }

    .r3 {
        padding: 30px 0;
    }

    .lg-title {
        font-weight: 500;
        font-size: 1.5rem;
        padding: 15px;
    }

    .courses {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;

        >div {
            flex: 0 0 250px;
            margin: 10px;
            border: 1px solid white;
            border-radius: 15px;
            overflow: hidden;
            color: var(--blue-active);
            .name a {
                color: var(--blue-active);
                font-weight: 500;
                line-height: 1.5rem;
                height: 3rem;
            }
        }
        .bottom {
            font-size: 0.8rem;
            display: flex;
            background-color: var(--blue-active);
            color: white;
            >div {
                display: flex;
                align-items: center;
                .pgn__icon {
                    margin-right: 1ch;
                }
                &:last-child {
                    margin-left: auto;
                }
            }
            padding: 10px;
        }
    }

    .courses-wrapper {
        background-color: var(--blue-active);
        padding: 30px 0;
    }

    .viewmore-btn {
        margin: 15px auto;
        display: block;
        width: fit-content;
        color: var(--blue-active);
        background-color: white;
        border-radius: 25px;
        padding: 8px 24px;
    }

    .guide-items {
        background-color: white;
        padding: 30px 15px;
        color: var(--blue-active);
        text-align: center;
        font-weight: 500;
        img {
            max-width: 100%;
        }
    }

    .news-events {
        >div {
            &:first-child {
                .title {
                    display: block;
                    color: var(--blue-active);
                    margin: 15px 0 10px 0;
                    font-size: 1.2rem;
                }

                .description {
                    color: var(--blue-active);
                }
            }
        }

        .col-md-4 {
            padding-left: 0px;
            padding-right: 0px;
        }

        .md-title {
            font-size: 1.2rem;
            font-weight: 500;
            color: var(--blue-active);
        }

        .news-title {
            display: flex;
            align-items: center;
            margin-bottom: 15px;
            .pgn__icon {
                margin-top: 3px;
            }
        }

        .event-title {
            justify-content: flex-end;
        }

        .news-img-wrapper {
            height: 300px;
            overflow: hidden;
            display: block;
            object-fit: cover;
            background-position: center;
        }

        .carousel-control-next, .carousel-control-prev {
            height: 300px;
        }

        .carousel-control-next-icon, .carousel-control-prev-icon {
            border-radius: 50%;
            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
            z-index: 1;
            &::before {
                content: "";
                font-size: 57px;
                display: block;
                padding: 20px;
                margin-left: -10px;
                margin-top: -10px;
                background-color: rgb(255, 255, 255);
                border-radius: 50%;
                opacity: 0.4;
                z-index: -1;
            }
        }

        .carousel-control-prev-icon {
            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e");
        }

        .event-container {
            padding-left: 0px;
            padding-right: 0px;
        }

        .event {
            border-bottom: 3px solid rgb(29, 103, 205);
            padding: 20px 0;
            color: var(--blue-active);
            >div {
                &:first-child {
                    min-width: 105px;
                    padding-bottom: 15px;
                    >div {
                        text-align: center;
                        >div {
                            &:first-child {
                                background-color: #ff7023;
                                color: white;
                                font-weight: 500;
                            }
                            padding: 6px 12px;
                            border: 1px solid #ddd;
                        }
                    }
                }
            }
        }
    }

    .social-icons {
        position: fixed;
        top: calc(100vh/2 - 60px);
        right: 0;
        background-color: rgb(33, 62, 140);
        z-index: 2;

        img {
            padding: 0.5rem;
        }

        @media (max-width: 991px) {
            display: none !important;
        }
    }

    .course-filter-options {
        flex: 0 0 11vw;
        margin: 0 auto;

        @media (min-width: 2140px) {
            flex: 0 0 calc((100vw - 1500px)/2);
        }

        .blank-area {
            height: 68px;

            @media (max-width: 1199px) {
                padding: unset;
            }
        }

        .search-common-course {
            display: flex;
            
            @media (min-width: 1200px) {
                flex-direction: column;
            }
            
            .icon-info {
                margin: 0 auto;
                padding: 4rem 0;
                max-width: 250px;
                min-width: 200px;
                text-align: center;

                @media (max-width: 1199px) {
                    padding: 1rem 0;
                }

                @media (max-width: 575px) {
                    padding: .5rem 0;
                    max-width: 125px;
                    min-width: 100px;
                }

                img {
                    display: block;
                    margin: auto;

                    @media (max-width: 575px) {
                        width: 50px;
                    }
                }

                span {
                    font-weight: 600;
                    color: var(--blue-active);

                    @media (max-width: 575px) {
                        font-size: small;
                    }
                }

            }

            .icon-info-line {
                text-align: center;
                border-bottom: 2px solid var(--blue-active);
                position: relative;
                width: 50%;
                left: 25%;

                @media (max-width: 1199px) {
                    display: none;
                }
            }
        }
    }
}

@media (max-width: 767px) {
    .container.home-body, .home-body .container {
        width: 100%!important;
        max-width: 100%!important;
        padding-left: 0!important;
        padding-right: 0!important;
    }

    .home-body {
        .courses {
            justify-content: flex-start;
            flex-wrap: nowrap;
            overflow-x: auto;
        }

        .news-events, .event-container {
            padding-left: 12px!important;
            padding-right: 12px!important;
        }

        .guide-items img {
            padding-left: 12px;
            padding-right: 12px;
        }
    }

    .event-title {
        margin-top: 30px;
        justify-content: start!important;
        padding-left: 12px;
    }
}

